# hobbit-bar

./: Cargo.toml  README.md  build.rs  config.toml  style.css  tracing.toml
bar-modules/: clock.lua  clock.ui
src/: main.rs  module_loader.rs
src/modules/: active_window.rs  battery.rs  bluetooth.rs  clock.rs  hypr_workspaces.rs  media.rs  mod.rs  spacer.rs  volume.rs  wifi.rs
