[package]
name = "hobbit-bar"
version = "0.1.0"
edition = "2024"

[dependencies]
gtk4 = { version = "0.9", package = "gtk4" }
gdk4 = "0.9"
glib = "0.20"
gdk4-wayland = "0.9.6"
gtk4-layer-shell = "0.5.0"
chrono = "0.4.41"
roxmltree = "0.20.0"
tracing-config = { version = "0.2.2" }
tracing = { version = "0.1.41", features = [
  "max_level_trace",
  "release_max_level_info",
] }
mlua = { version = "0.10.5", features = ["lua54"] }
